bug fix- search results cut off

--- a/app/assets/stylesheets/styles/mainpage.css.scss
+++ b/app/assets/stylesheets/styles/mainpage.css.scss
@@ -121,7 +121,8 @@ body {
   }
 
   .search-result {
-    border: 1px solid black;
+    border-bottom: 1px solid black;
+    padding: 0 9rem 0 6rem;
   }
 
 }
